--- a/az104/data/page_227.html
+++ b/az104/data/page_227.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" defhref="font-awesome.min.css" />
 <script>
@@ -77,7 +78,7 @@ function myFunction() {
 	</div>
 </div>
 </div>
-<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="/az104/data/page_225.html">Prv</a></p></td> <td style="width: 40%;"><p style="text-align: center; left;margin-right: 29px;"><a href="https://cloudtech.how/microsoft/exam-az-104-microsoft-azure-administrator/az-104-question-139" rel="noopener noreferrer" target="_blank">Referance Page</a></p></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="/az104/data/page_227.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="804432">
+<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="page_226.html">Prv</a></p></td> <td style="width: 40%;"><p style="text-align: center; left;margin-right: 29px;"><a href="https://cloudtech.how/microsoft/exam-az-104-microsoft-azure-administrator/az-104-question-140" rel="noopener noreferrer" target="_blank">Referance Page</a></p></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="page_228.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="804432">
 <p class="card-text">
 							
 								You have an Azure subscription named Subscription1 that has the following providers registered:<br/>✑ Authorization<br/>✑ Automation<br/>✑ Resources<br/>✑ Compute<br/>✑ KeyVault<br/>✑ Network<br/>✑ Storage<br/>✑ Billing<br/>✑ Web<br/>Subscription1 contains an Azure virtual machine named VM1 that has the following configurations:<br/>✑ Private IP address: 10.0.0.4 (dynamic)<br/>✑ Network security group (NSG): NSG1<br/>✑ Public IP address: None<br/>✑ Availability set: AVSet<br/>✑ Subnet: 10.0.0.0/24<br/>✑ Managed disks: No<br/>✑ Location: East US<br/>You need to record all the successful and failed connection attempts to VM1.<br/>Which three actions should you perform? Each correct answer presents part of the solution.<br/>NOTE: Each correct selection is worth one point.<br/>
