--- a/az104/data/page_235.html
+++ b/az104/data/page_235.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" defhref="font-awesome.min.css" />
 <script>
@@ -77,7 +78,7 @@ function myFunction() {
 	</div>
 </div>
 </div>
-<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="/az104/data/page_233.html">Prv</a></p></td> <td style="width: 40%;"><p style="text-align: center; left;margin-right: 29px;"><a href="https://cloudtech.how/microsoft/exam-az-104-microsoft-azure-administrator/az-104-question-146" rel="noopener noreferrer" target="_blank">Referance Page</a></p></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="/az104/data/page_235.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="804440">
+<hr /><table style="border-collapse: collapse; width: 100%;" border="0"><tbody><tr><td style="width: 30%;"><p style="text-align: left; margin-left: 29px;"><a href="page_234.html">Prv</a></p></td> <td style="width: 40%;"><p style="text-align: center; left;margin-right: 29px;"><a href="https://cloudtech.how/microsoft/exam-az-104-microsoft-azure-administrator/az-104-question-147" rel="noopener noreferrer" target="_blank">Referance Page</a></p></td><td style="width: 30%;"><p style="text-align: right; left;margin-right: 29px;"><a href="page_236.html">Next</a></p></td></tr></tbody></table><div class="question-body mt-3 pt-3 border-top" data-id="804440">
 <p class="card-text">
 							
 								HOTSPOT -<br/>You have an Azure subscription named Subscription1 that contains the following resource group:<br/>✑ Name: RG1<br/>✑ Region: West US<br/>✑ Tag: `tag1`: `value1`<br/>You assign an Azure policy named Policy1 to Subscription1 by using the following configurations:<br/>✑ Exclusions: None<br/>✑ Policy definition: Append a tag and its value to resources<br/>✑ Assignment name: Policy1<br/>✑ Parameters:<br/>✑ Tag name: tag2<br/><br/>Tag value: value2 -<br/><img class="in-exam-image" src="https://www.examtopics.com/assets/media/exam-media/04223/0027800009.png"/><br/>After Policy1 is assigned, you create a storage account that has the following configuration:<br/>✑ Name: storage1<br/>✑ Location: West US<br/>✑ Resource group: RG1<br/>✑ Tags: `tag3`: `value3`<br/>You need to identify which tags are assigned to each resource.<br/>What should you identify? To answer, select the appropriate options in the answer area.<br/>NOTE: Each correct selection is worth one point.<br/>Hot Area:<br/><img class="in-exam-image" src="https://www.examtopics.com/assets/media/exam-media/04223/0027900005.jpg"/><br/>
